# NutricIA-backend

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  mypy.ini  nutricia.db  pyproject.toml  pytest.ini  ruff.toml
alembic/: env.py
alembic/versions/: 001_add_email_auth_fields.py  002_add_password_reset_tokens.py  002_add_remaining_tables.py  003_add_token_tables.py  003_create_baseline_remaining_tables.py  004_enable_pgvector_extension.py  005_add_food_catalog_table.py  006_add_meal_embeddings_table.py  007_add_user_food_profile_table.py  008_add_conversations_and_messages.py  009_add_meal_plans_tables.py  010_add_scan_corrections_table.py  011_garden_day_constraints.py
app/: config.py  database.py  dependencies.py  main.py
app/analytics/: router.py  schemas.py  service.py
app/auth/: models.py  router.py  schemas.py  service.py
app/catalog/: __init__.py  cli.py
app/habits/: models.py  router.py  schemas.py  service.py
app/meals/: ai_provider.py  models.py  router.py  schemas.py  service.py
app/notifications/: __init__.py
app/shared/: __init__.py
app/users/: router.py  schemas.py  service.py
scripts/: __init__.py  seed.py
tests/: conftest.py
tests/integration/: test_auth_api.py  test_auth_logout.py  test_auth_refresh.py  test_chat_api.py  test_habits_api.py  test_learning_loop_api.py  test_meal_correction_tracking.py  test_meal_save_with_embedding.py  test_meals_api.py  test_migrations.py  test_password_reset_api.py  test_plans_api.py  test_rate_limiting.py
tests/unit/: test_config.py  test_rate_limit.py  (+2 more)
(+150 files in other folders)
